.github/diagnostics/issue447-v501-hotfix-preflight-failure.txt
ISSUE447 V5.0.1 HOTFIX PREFLIGHT DIAGNOSTIC
returncode=1

===== STDOUT =====


===== STDERR =====
  File "/tmp/issue447-hotfix-diagnostic-13sq3emj/repo/.github/scripts/test_issue447_menu_boot_fail_open.py", line 19
    assert "try {
           ^
SyntaxError: unterminated string literal (detected at line 19)
Traceback (most recent call last):
  File "/tmp/issue447-hotfix-diagnostic-13sq3emj/repo/.github/development-packages/issue447-v5.0.1-menu-boot-hotfix.py", line 234, in <module>
    subprocess.run(["python3", str(CONTRACT)], cwd=ROOT, env=ENV, check=True)
  File "/usr/lib/python3.12/subprocess.py", line 571, in run
    raise CalledProcessError(retcode, process.args,
subprocess.CalledProcessError: Command '['python3', '/tmp/issue447-hotfix-diagnostic-13sq3emj/repo/.github/scripts/test_issue447_menu_boot_fail_open.py']' returned non-zero exit status 1.
